# 1ma2

./: .gitattributes
data/boundaries/: ann-arbor-boundary.dbf  ann-arbor-boundary.prj  ann-arbor-boundary.sbn  ann-arbor-boundary.sbx  ann-arbor-boundary.shp  ann-arbor-boundary.shp.xml  ann-arbor-boundary.shx  chicago-boundary.dbf  chicago-boundary.shp  chicago-boundary.shx  columbus-boundary.dbf  columbus-boundary.prj  columbus-boundary.shp  columbus-boundary.shx  denver-boundary.dbf  denver-boundary.sbn  denver-boundary.sbx  denver-boundary.shp  denver-boundary.shp.xml  denver-boundary.shx  detroit-boundary.dbf  detroit-boundary.shp  detroit-boundary.shx  new-york-city-boundary.dbf  new-york-city-boundary.prj  new-york-city-boundary.shp  new-york-city-boundary.shx  paris-boundary-arrondissements.dbf  paris-boundary-arrondissements.shp  paris-boundary-arrondissements.shx  philadelphia-boundary.dbf  philadelphia-boundary.shp  philadelphia-boundary.shx  san-francisco-mask.dbf  san-francisco-mask.prj  san-francisco-mask.sbn  san-francisco-mask.sbx  san-francisco-mask.shp  san-francisco-mask.shp.xml  san-francisco-mask.shx  (+1 more)
data/notebooks/: population_map.ipynb
data/pop/: france-population-2020.tif  usa-population-2020.tif
site/: .gitignore  README.md  config.yaml  makefile  pyproject.toml
site/1ma2/: __main__.py
site/templates/: base.html.jinja2
